# papertrail

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: decisions.md
docs/experiments/: doctr_baseline.py
src/papertrail/ocr/: doctr_setuup.py  engine.py  paddle_test.py
tests/: test_health.py  test_ocr.py
