[project]
name = "papertrail"
version = "0.1.0"
description = "Turn photographed documents into a queryable knowledge base — OCR → structured extraction → RAG Q&amp;A, with a measured eval harness"
authors = [{name = "Daniel Popoola", email = "danielpopoola95@gmail.com"},]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "fitz>=0.0.1.dev2",
    "matplotlib>=3.11.0",
    "mplcursors>=0.7.1",
    "numpy>=2.5.1",
    "opencv-python>=4.13.0.92",
    "paddleocr[all]==3.3.0",
    "paddlepaddle==3.2.0",
    "pandas>=3.0.3",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
    "python-doctr[torch]>=1.0.1",
    "rapidfuzz>=3.14.5",
    "torch>=2.13.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]




[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
